[package]
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>"]
edition = "2021"
name = "ddc-node"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ddc = "0.2.2"
ddc-hi = "0.4.1"
mccs-db = "0.1.2"
napi = {version = "2", features = ["async"]}
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
