[package]
authors = ["Alexandre MONIER <alexandre.monierc@gmail.com>"]
edition = "2021"
name = "ddc-node"
version = "1.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ddc = "0.2.2"
ddc-hi = "0.4.1"
mccs-db = "0.1.3"
napi = {version = "2.12.6", features = ["async"]}
napi-derive = "2.12.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
